k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongodb
    template:
        metadata:
            labels:
                app: mongodb
        spec:
            containers:
                - name: mongodb
                  image: mongo:latest
                  ports:
                      - containerPort: 27017
                  volumeMounts:
                      - name: mongo-storage
                        mountPath: /data/db
            volumes:
                - name: mongo-storage
                  emptyDir: {}
