k8s/notification-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: notification-service
spec:
    replicas: 3
    selector:
        matchLabels:
            app: notification-service
    template:
        metadata:
            labels:
                app: notification-service
        spec:
            containers:
                - name: notification-service
                  image: victoriousvipin/nms_notification-service:latest
                  ports:
                      - containerPort: 3003
