k8s/rabbitmq-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: rabbitmq
spec:
    serviceName: "rabbitmq"
    replicas: 1
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
                - name: rabbitmq
                  image: rabbitmq:3-management
                  ports:
                      - containerPort: 5672
                      - containerPort: 15672
                  volumeMounts:
                      - name: rabbitmq-storage
                        mountPath: /var/lib/rabbitmq
    volumeClaimTemplates:
        - metadata:
              name: rabbitmq-storage
          spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                  requests:
                      storage: 1Gi
