k8s/task-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: task-service
spec:
    replicas: 3
    selector:
        matchLabels:
            app: task-service
    template:
        metadata:
            labels:
                app: task-service
        spec:
            containers:
                - name: task-service
                  image: victoriousvipin/nms_task-service:latest
                  ports:
                      - containerPort: 3002
