k8s/user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-service
spec:
    replicas: 3
    selector:
        matchLabels:
            app: user-service
    template:
        metadata:
            labels:
                app: user-service
        spec:
            containers:
                - name: user-service
                  image: victoriousvipin/nms_user-service:latest
                  ports:
                      - containerPort: 3001
