k8s/mongodb-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: mongo
spec:
    selector:
        app: mongodb
    ports:
        - protocol: TCP
          port: 27017
          targetPort: 27017
    type: ClusterIP
