k8s/notification-service-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: notification-service
spec:
    selector:
        app: notification-service
    ports:
        - protocol: TCP
          port: 3003
          targetPort: 3003
    type: ClusterIP
