k8s/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
spec:
    selector:
        app: rabbitmq
    ports:
        - name: amqp
          protocol: TCP
          port: 5672
          targetPort: 5672
        - name: management
          protocol: TCP
          port: 15672
          targetPort: 15672
    type: ClusterIP
