k8s/task-service-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: task-service
spec:
    selector:
        app: task-service
    ports:
        - protocol: TCP
          port: 3002
          targetPort: 3002
    type: ClusterIP
