k8s/user-service-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: user-service
spec:
    selector:
        app: user-service
    ports:
        - protocol: TCP
          port: 3001
          targetPort: 3001
    type: ClusterIP
